updated erik cover and images

--- a/erik.html
+++ b/erik.html
@@ -52,14 +52,23 @@
                     </header>
 
     <section class="templateux-hero">
-      <div class="container">
-        <div id="detail-img">
+ <!--      <div class="container"> -->
+        <div id="cj-img">
          <!--  <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/erik/erikcover.jpg" alt="Image placeholder" >
        <!--  </div> -->
         </div>
-      </div>
+     <!--  </div> -->
     </section>
+    <div class="sidenav">
+      <a href="#overviewtag">overview</a>
+      <a href="#challengetag">challenge</a>
+      <a href="#solutiontag">solution</a>
+      <a href="#approachtag">approach</a>
+      <a href="#metricstag">metrics</a>
+      <a href="#reflectiontag">reflection</a>
+      <a href="#linkstag">links</a>
+    </div>
      <!-- <ul id="menu">
             <li style="list-style-type:none"><a href="simranjobanputra.co"><font color="#000000">Overview</font></a></li>
             <li style="list-style-type:none"><a href="lemon.html#challengetag"><font color="#000000">Challenge</a></font></li>
@@ -82,7 +91,7 @@
       <div class="container" data-aos="fade-up" font->
         <div class="row justify-content-center">
           <div class="col-md-10">
-            <br>
+            <br><br>
             <div class="row work-detail">
               <div class="col-md-2">
                 <p style="font-family:lato;" id="projectinfo"><b>Role</b><br>UX Designer</p>
@@ -102,9 +111,9 @@
               </div>
           </div>
           <div class="row">
-              <div class="col-md-10" >
+              <div class="col-md-10" id="overviewtag">
                 <br><br>
-                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="overviewtag">OVERVIEW</a></font></strong></h2>
+                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">OVERVIEW</font></strong></h2>
                 <br>
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">project ask</font></h4>
                 <p id="maintext"><b>Redesigning the Interactive Principles site</b> to make it easier for novice game designers to learn the fundamental learning science principles behind game design.</p><br>
@@ -118,9 +127,9 @@
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">impact</font></h4>
                 <p id="maintext">The changes are <b>currently being implemented</b> on the site for future iterations of the course. Other students from the Education Technology Center at Carnegie Mellon have also been hired to <b>implement the game design</b> that I prototyped, which is really exciting!</p>
               </div>
-              <div class="col-md-7" ><a id="overviewtag"></a>
+              <div class="col-md-7" ><a id="challengetag"></a>
                   <br><br>
-                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="challengetag">CHALLENGE</a></font></strong></h2><br>
+                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">CHALLENGE</font></strong></h2><br>
                    <h4 id="keyfindings"><font color="#20B2AA">Designing authentic learning content while maintaining the fun criteria is difficult.</font></h4>
               </div>
               <div class="col-md-10">
@@ -134,8 +143,8 @@
                   <font color="#20B2AA">03</font> How do we innovate while <b>maintaining the current site infrastructure?</b><br><br>
                   </p>
               </div>
-              <div class="col-md-10">
-                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="challengetag">SOLUTION</a></font></strong></h2><br>
+              <div class="col-md-10" id="solutiontag">
+                <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">SOLUTION</font></strong></h2><br>
                 <h4 id="keyfindings"><font color="#20B2AA">Reframing the card categories</font></h4><br>
               </div>
               <div class="col-md-4" ><a id="overviewtag"></a>
@@ -175,7 +184,7 @@
                 <br>
                 <center><iframe src="https://player.vimeo.com/video/408292824" width="640" height="499" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></center>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="approachtag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">APPROACH</font></strong></a></h2><br><br>
                 <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">Current Website Status</font></h4><br>
@@ -302,7 +311,7 @@
               <div class="col-md-12" id="detail-img">
                 <img src="images/erik/cooked1.jpg">
               </div>
-              <div class="col-md-12">
+              <div class="col-md-12" id="metricstag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">METRICS</font></strong></a></h2><br>
                 <p id="maintext">This site is going to be deployed in the next iteration of the 'Designing Educational Games' class while the next iteration of the game is currently being implemented.<br><br>
@@ -312,7 +321,7 @@
                 <font color="#20B2AA">04</font> Conversion rate (new students that end up taking the class)<br>
                 </p>
               </div>
-              <div class="col-md-10">
+              <div class="col-md-10" id="reflectiontag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">REFLECTION</font></strong></a></h2><br>
                   <font color="#20B2AA"><b>01 Building Something with Underlying Meaning is Difficult</b></font><br>
@@ -320,7 +329,7 @@
                   <font color="#20B2AA"><b>02 Game Design = Psychology in Practice</b></font><br>
                 <p id="maintext">This was my first exposure to game design and I absolutely loved it. I learned a lot about the psychology and science behind designing games. Even every small change to the game there is an underlying principle or logic it's tied to which really fascinated me.</p>
               </div>
-              <div class="col-md-10">
+              <div class="col-md-10" id="linkstag">
                 <br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">LINKS</font></strong></a></h2><br>
                 <p id="maintext"><a href="https://eharpste.github.io/interactive-principles/#/">Live Site</a></p>
