--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link href="img/smallicon.png" rel="shortcut icon"/>
+    <link href="images/sun.png" rel="shortcut icon"/>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
@@ -66,7 +66,7 @@
             </div> -->
             <div class="header-social">
                 <a href="index.html"><h8 style="font-family:lato;">work</h8>
-                <a href="resume.html"><h8 style="font-family:lato;">research</h8>
+                <a href="research.html"><h8 style="font-family:lato;">research</h8>
                 <a href="blog.html"><h8 style="font-family:lato;">play</h8>
                 <a href="about.html"><h8 style="font-family:lato;">about</h8></a>
                 <a href="img/resume.pdf"><h8 style="font-family:lato;">resume</h8></a>
