--- a/cj.html
+++ b/cj.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-  <title>cj</title>
+  <title>nasa</title>
   <meta charset="UTF-8">
   <meta name="description" content="Nissa Photography studio html template">
   <meta name="keywords" content="industry, html">
@@ -52,14 +52,24 @@
                     </header>
 
     <section class="templateux-hero">
-      <div class="container">
-        <div id="detail-img">
+
+        <div id="cj-img">
          <!--  <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/cj/cjcover.jpg" alt="Image placeholder" >
        <!--  </div> -->
         </div>
-      </div>
+
     </section>
+    <div class="sidenav">
+      <a href="#overviewtag">overview</a>
+      <!-- <a href="#challengetag">challenge</a> -->
+      <a href="#solutiontag">solution</a>
+     <!--  <a href="#">approach</a>
+      <a href="#">metrics</a>
+      <a href="#">reflection</a>
+      <a href="#">links</a> -->
+    </div>
+
      <!-- <ul id="menu">
             <li style="list-style-type:none"><a href="simranjobanputra.co"><font color="#000000">Overview</font></a></li>
             <li style="list-style-type:none"><a href="lemon.html#challengetag"><font color="#000000">Challenge</a></font></li>
@@ -79,12 +89,13 @@
           </div>
         </div>
       </div>
-    <section class="templateux-portfolio-overlap mb-5" id="next">
+    <section class="templateux-portfolio-overlap mb-5">
       <div class="container" data-aos="fade-up" font->
         <div class="row justify-content-center">
           <div class="col-md-10">
-            <br>
+            <br><br>
             <div class="row work-detail">
+              <br>
               <div class="col-md-2">
                 <p style="font-family:lato;" id="projectinfo"><b>Role</b><br>UX Designer, Product Strategist</p>
               </div>
@@ -101,8 +112,8 @@
               <!--   <strong style="font-family:lato;">Tools</strong><br>
                 <span class=caption style="font-family:lato;font-size:1.3vw;">Sketch, Photoshop, Figma, InDesign, iMovie</span> -->
               </div>
-               <div class="row">
-              <div class="col-md-10" >
+              <div class="row">
+              <div class="col-md-10" id="overviewtag">
                 <br><br>
                 <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9"><a id="overviewtag">OVERVIEW</a></font></strong></h2>
                 <br>
@@ -115,10 +126,18 @@
                 <p id="maintext">I was a <b>UX Designer</b> along with one of my other teammates and also did a lot of the <b>market research</b> on how we picked our target demographic and how we would market this application.</p>
                 <br>
                 <h4 style="font-family:lato;"><font color="#DAA520" id="subsections">impact</font></h4>
-                <p id="maintext">We <b>presented our work</b> to the Construction Junction management and were able to create some movement into how they partner with the local Pittsburgh community, specifically <b>increasing the number of social events</b> they hold for the community and the <b>number of educational event</b> they hold!</b></p>
+                <p id="maintext">We <b>presented our work</b> to the Construction Junction management and were able to create some movement into how they partner with the local Pittsburgh community, specifically <b>increasing the number of social events and educational events</b>  they hold!</b></p>
               </div>
-              <div class="col-md-10">
-                <p id="maintext">More information coming soon!</p>
+           <!--    <div class="col-md-5" ><a id="challengetag"></a>
+                  <br><br>
+                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">CHALLENGE</font></strong></h2><br>
+                   <h4 id="keyfindings"><font color="#20B2AA">Encourage in-store shopping.</font></h4><br>
+              </div> -->
+              <div class="col-md-12" id="solutiontag">
+                  <br><br>
+                  <h2 style="font-family:lato;" id="subheader"><strong><font color="#A9A9A9">SOLUTION</font></strong></h2><br>
+                   <h4 id="keyfindings"><font color="#20B2AA">Introducing the Junction Journey.</font></h4><br>
+                   To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team and I came up with Junction Journey: a <b>mobile application</b> geared towards kids that uses gamification and learning science principles to create a fun environment <b>for children to learn about sustainability and conservation.<br></br>Feel free to click around on our <a href="https://framer.cloud/ZIOOL/7"><font color="#DAA520">Framer</font></a> prototype!</b>
               </div>
           </div>
            <div class="col-md-12">
