--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <div class="content-1330 center-relative">
                         <div class="page-desc" id="totop" data-aos="fade-up">
                            <br><br><br><br><br>
-                           <h2><font color="#A9A9A9">Hi, I'm Simran!</font></h2>
-                            <h7 style="font-family:lato;">As a designer, I want to be able to use technology to alleviate societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using my backgrounds in business <font color="#DAA520">+</font> design.</font></h7>
+                           <h2 id="subheader"><font color="#A9A9A9">Hi, I'm Simran!</font></h2>
+                            <h7 style="font-family:lato;" id="subheader">As a designer, I want to be able to use technology to alleviate societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using my backgrounds in business <font color="#DAA520">+</font> design.</font></h7>
                             <br><br>
                         	<a href="https://www.pinterest.com/simranjobanputr/"><i class="fa fa-pinterest" style="color:#000000"></i></a>&nbsp;&nbsp;&nbsp;
                         	<a href="mailto:sjobanpu@andrew.cmu.edu"><i class="fa fa-envelope" style="color:#000000"></i></a>&nbsp;&nbsp;&nbsp;
