--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </header>
 
                     <div class="content-1330 center-relative">
-                        <div class="page-desc" id="totop" data-aos="fade-up">
+                        <div class="page-desc"  data-aos="fade-up">
                            <br><br><br><br><br>
                            <h2 id="subheader"><font color="#A9A9A9">Hi, I'm Simran!</font></h2>
                             <h7 style="font-family:lato;text-align: left;" id="subheader">As a designer, I want to be able to use technology to alleviate societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using my backgrounds in business <font color="#DAA520">+</font> design.</font></h7>
