updates to lemon

--- a/lemon.html
+++ b/lemon.html
@@ -210,23 +210,14 @@
               <div class="col-md-12" id="detail-img">
                  <img src="images/lemonnew/screendesign2.jpg" alt="Image placeholder">
               </div>
-              <div class="col-md-12">
+              <!-- <div class="col-md-12">
                 <br><br><br>
                 <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">concept poster</font></h4>
               </div>
               <div class="col-md-12" id="detail-img">
                 <img src="images/lemonnew/teamposter.png" alt="Image placeholder">
-              </div>
-              <div class="col-md-5">
-                <br><br><br>
-                <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">app walkthrough + analysis</font></h4>
-                <iframe src="https://player.vimeo.com/video/405898668" width="240" height="596" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-                <!-- <iframe width="500" height="315" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-              </div>
-              <div class="col-md-7" id="lemon-img">
-                <br><br><br><br><br><br><br><br>
-                <img src="images/lemonnew/valuedlow.jpg" class="movelemon" alt="Image placeholder">
-              </div>
+              </div> -->
+
               <!-- <div class="cold-md-5">
                 <br><br><br>
                 <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">competitor analysis</font></h4>
@@ -312,13 +303,29 @@
             <img src="images/lemonnew/styleguide3.jpg">
           </div>
           <div class="col-md-12" id="detail-img">
+            <br><br>
+            <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">mobile flow</font></h4><br>
+            <img src="images/lemonnew/screendesign.jpg">
+          </div>
+          <br>
+          <div class="col-md-5">
+                <br><br><br>
+                <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">app walkthrough + analysis</font></h4>
+                <iframe src="https://player.vimeo.com/video/405898668" width="240" height="596" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <!-- <iframe width="500" height="315" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </div>
+          <div class="col-md-7" id="lemon-img">
+                <br><br><br><br><br><br><br><br>
+                <img src="images/lemonnew/valuedlow.jpg" class="movelemon" alt="Image placeholder">
+          </div>
+         <!--  <div class="col-md-12" id="detail-img">
             <br><br><br>
             <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">concept video</font></h4><br>
             <img src="images/lemonnew/production.jpg"><br>
             <p id="maintext">filming + production</p><br>
             <img src="images/lemonnew/video.jpg"><br>
             <p id="maintext">video storyboarding</p>
-          </div>
+          </div> -->
           <div class="col-md-12" id="detail-img">
             <br><br><br>
             <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">demo day</font></h4><br>
