--- a/lemon.html
+++ b/lemon.html
@@ -207,9 +207,22 @@
                 <br><br><br>
                 <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">mobile screen flow</font></h4>
               </div>
-              <div class="col-md-12" id="detail-img">
+               <div class="col-md-12" id="detail-img">
                  <img src="images/lemonnew/screendesign2.jpg" alt="Image placeholder">
               </div>
+              <div class="col-md-12" id="detail-img">
+                 <img src="images/lemonnew/onboarding.jpg" alt="Image placeholder">
+              </div>
+              <div class="col-md-12" id="detail-img">
+                 <img src="images/lemonnew/tracking.jpg" alt="Image placeholder">
+              </div>
+              <div class="col-md-12" id="detail-img">
+                 <img src="images/lemonnew/alert.jpg" alt="Image placeholder">
+              </div>
+               <div class="col-md-12" id="detail-img">
+                 <img src="images/lemonnew/education.jpg" alt="Image placeholder">
+              </div>
+
               <!-- <div class="col-md-12">
                 <br><br><br>
                 <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">concept poster</font></h4>
@@ -304,7 +317,7 @@
           </div>
           <div class="col-md-12" id="detail-img">
             <br><br>
-            <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">mobile flow</font></h4><br>
+            <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">initial mobile flow</font></h4><br>
             <img src="images/lemonnew/screendesign.jpg">
           </div>
           <br>
