--- a/lemon.html
+++ b/lemon.html
@@ -205,11 +205,11 @@
               </div>
               <div class="col-md-12">
                 <br><br><br>
-                <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">mobile screen flow</font></h4>
+                <h4 style="font-family:lato;" id="subsections"><font color="#DAA520">user flow</font></h4>
               </div>
-               <div class="col-md-12" id="detail-img">
+            <!--    <div class="col-md-12" id="detail-img">
                  <img src="images/lemonnew/screendesign2.jpg" alt="Image placeholder">
-              </div>
+              </div> -->
               <br><br>
               <div class="col-md-12" id="detail-img">
                  <img src="images/lemonnew/onboarding.jpg" alt="Image placeholder">
