--- a/lemon.html
+++ b/lemon.html
@@ -221,12 +221,12 @@
                  <img src="images/lemonnew/tracking.jpg" alt="Image placeholder">
               </div>
               <br>
-              <div class="col-md-12" id="detail-img">
+              <div class="col-md-12" id="solution-img">
                 <br><br>
                  <img src="images/lemonnew/alert.jpg" alt="Image placeholder">
               </div>
               <br>
-               <div class="col-md-12" id="detail-img">
+               <div class="col-md-12" id="solution-img">
                 <br><br>
                  <img src="images/lemonnew/education.jpg" alt="Image placeholder">
               </div>
