--- a/lemon.html
+++ b/lemon.html
@@ -211,24 +211,8 @@
                  <img src="images/lemonnew/screendesign2.jpg" alt="Image placeholder">
               </div> -->
               <br><br>
-              <div class="col-md-12" id="detail-img">
-                <br><br>
-                 <img src="images/lemonnew/onboarding.jpg" alt="Image placeholder">
-              </div>
-              <br>
-              <div class="col-md-12" id="detail-img">
-                  <br><br>
-                 <img src="images/lemonnew/tracking.jpg" alt="Image placeholder">
-              </div>
-              <br>
-              <div class="col-md-12" id="solution-img">
-                <br><br>
-                 <img src="images/lemonnew/alert.jpg" alt="Image placeholder">
-              </div>
-              <br>
-               <div class="col-md-12" id="solution-img">
-                <br><br>
-                 <img src="images/lemonnew/education.jpg" alt="Image placeholder">
+              <div class="col-md-12" id="flow-img">
+                <img src="images/lemonnew/tracking.jpg" alt="Image placeholder">
               </div>
 
               <!-- <div class="col-md-12">
